--- a/source/assets/base.css
+++ b/source/assets/base.css
@@ -95,7 +95,10 @@
 	--card-foreground: oklch(0.985 0 0);
 	--popover: oklch(0.21 0.006 285.885);
 	--popover-foreground: oklch(0.985 0 0);
-	--primary: oklch(0.488 0.243 264.376);
+	/* --primary: oklch(0.56 0.23 264); */
+	/* --primary: oklch(0.6 0.22 264); */
+	--primary: oklch(0.54 0.2 264);
+
 	--primary-foreground: oklch(0.97 0.014 254.604);
 	--secondary: oklch(0.274 0.006 286.033);
 	--secondary-foreground: oklch(0.985 0 0);
